--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="course-col">
                 <h3>MUSICS</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque aliquet turpis nulla, eleifend faucibus est sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus Donec sit.</p>
+                <p>Let's look back on the interesting, old and good music that has gone viral and popular in 2021.</p>
             </div>
             <div class="course-col">
                 <h3>NEWS</h3>
